# RagLaba6

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  README.md  config_logging.py  docker-compose.cpu.yml  docker-compose.cuda.yml  docker-compose.yml  indexer.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  start_server.py
scripts/: setup_torch_gpu.ps1
src/: __init__.py  container.py
src/application/dtos/: qa_dto.py
src/application/interfaces/: i_rag_service.py
src/application/services/: document_indexing_service.py  rag_service.py
src/domain/entities/: document_chunk.py
src/domain/interfaces/: i_document_ingestion_service.py  i_embedding_service.py  i_llm_service.py  i_vector_store_service.py
src/infrastructure/services/: document_ingestion_service.py  embedding_service.py  llm_service.py  vector_store_service.py
src/presentation/controllers/: qa_controller.py
